# paper_sheet_detection

./: CMakeLists.txt  README.md  edge_detector.cpp  edge_detector.hpp  main.cpp
